<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/padmar_10"
    android:background="@drawable/layout_custom"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padmar_20"
    android:paddingVertical="@dimen/padmar_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rv_layout1_text1"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rv_layout1_text2"
                    android:textColor="@color/buttonColor" />

                <TextView
                    android:id="@+id/tvMinimumIDR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/rv_layout1_text3"
                    android:textColor="@color/buttonColor"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rv_layout2_text2"
                    android:textColor="@color/buttonColor" />

                <TextView
                    android:id="@+id/tvMaximumIDR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/rv_layout2_text3"
                    android:textColor="@color/buttonColor"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_10"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/padmar_10"
        android:background="@drawable/strikethrough_foreground_custom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rv_layout3_text1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvNumberOfApproval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/rv_layout1_text3"
            android:textColor="@color/buttonColor"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_10"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/padmar_10"
        android:background="@drawable/strikethrough_foreground_custom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rv_layout4_text1"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/rv_layout4_text2"
            android:textColor="@color/buttonColor" />
    </LinearLayout>
</LinearLayout>