<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/padmar_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mainColor"
                android:paddingVertical="@dimen/padmar_10"
                android:text="@string/notification"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/size_25"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/tvNotification"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/size_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/padmar_15"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnDismiss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/padmar_10"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_button2_custom"
                    android:text="@string/tvDismiss"
                    android:textColor="@color/mainColor"
                    android:textSize="@dimen/size_20"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnContinueDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/padmar_10"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_button1_custom"
                    android:text="@string/tvConfirm"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_20"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>