<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:orientation="vertical"
    tools:context="com.example.ui.main.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padmar_20"
        android:text="@string/mainTitle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/size_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_layout_custom"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padmar_25">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="@dimen/padmar_20"
            android:background="@drawable/button_custom"
            android:drawableStart="@drawable/ic_add"
            android:drawablePadding="@dimen/padmar_10"
            android:paddingHorizontal="@dimen/padmar_15"
            android:text="@string/buttonMainTitle"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_10"
            android:layout_gravity="center"
            android:background="@drawable/strikethrough_foreground_custom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padmar_10"
            android:background="@drawable/layout_custom"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padmar_20"
            android:paddingVertical="@dimen/padmar_10"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/layout_50"
                android:layout_weight="1"
                android:background="@drawable/sort_layout_custom"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/tvDefault"
                android:textColor="@color/black"
                android:textSize="@dimen/size_18" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/layout_50"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="@dimen/padmar_10"
                android:weightSum="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/layout_50"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/tvDefault"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_18" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/ic_arrow_expand2" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padmar_10"
            android:background="@drawable/layout2_custom"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padmar_20"
            android:paddingVertical="@dimen/padmar_10"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/layout_50"
                android:layout_weight="1"
                android:background="@drawable/sort2_layout_custom"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/tvTransferOnline"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/size_18" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/layout_50"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="@dimen/padmar_10"
                android:weightSum="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/layout_50"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/tvTransferOnline"
                    android:textColor="@color/mainColor"
                    android:textSize="@dimen/size_18" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_weight="1"
                    android:rotation="180"
                    android:src="@drawable/ic_arrow_expand2_rotation" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_item_custom" />

    </LinearLayout>
</LinearLayout>